# hago

./: .gitignore  LICENSE  hago.cabal  stack.yaml
resources/test/: cases-atari.json  cases-immortal.json
src/Go/: Algorithms.hs  Main.hs  Parse.hs  Server.hs
src/Go/Algorithms/: Immortal.hs  NaiveAtari.hs
src/Go/Core/: Fields.hs  Position.hs  Situation.hs  Stones.hs  Tree.hs
src/Go/Database/: Simple.hs
test/: Main.hs
test/Tests/Go/: Atari.hs  Fields.hs  Immortal.hs  Position.hs  Stones.hs
